force-app/main/default/objects/Merge_Account__c/Merge_Account__c.object-meta.xml
<CustomObject>
    <label>Merge Account</label>
    <nameField>
        <displayFormat>Merge-{00000}</displayFormat>
        <label>Merge Account</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>