force-app/main/default/objects/Merge_Account__c/fields/Active_Membership__c.field-meta.xml
<CustomField>
    <fullName>Active_Membership__c</fullName>
    <label>Active Membership</label>
    <length>20</length>
    <type>Text</type>
</CustomField>