force-app/main/default/objects/Merge_Account__c/fields/Active_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Active_Membership_Type__c</fullName>
    <label>Active Membership Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>