force-app/main/default/objects/Merge_Account__c/fields/Available_Member_Slot__c.field-meta.xml
<CustomField>
    <fullName>Available_Member_Slot__c</fullName>
    <label>Available Member Slot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>