force-app/main/default/objects/Merge_Account__c/fields/Company_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_2__c</fullName>
    <description>This field is to store the one of the company phone number</description>
    <label>Company Phone 2</label>
    <type>Phone</type>
</CustomField>