force-app/main/default/objects/Merge_Account__c/fields/Company_Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_3__c</fullName>
    <label>Company Phone 3</label>
    <type>Phone</type>
</CustomField>