force-app/main/default/objects/Merge_Account__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>TextArea</type>
</CustomField>