force-app/main/default/objects/Merge_Account__c/fields/Duplicate_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Account_Name__c</fullName>
    <label>Duplicate Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>