force-app/main/default/objects/Merge_Account__c/fields/Master_Account__c.field-meta.xml
<CustomField>
    <fullName>Master_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merge Accounts (Master)</relationshipLabel>
    <relationshipName>Merge_Accounts_As_Master</relationshipName>
    <type>Lookup</type>
</CustomField>