force-app/main/default/objects/Merge_Account__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Memberships__c</referenceTo>
    <relationshipLabel>Merge Accounts</relationshipLabel>
    <relationshipName>Merge_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>