force-app/main/default/objects/Merge_Account__c/fields/Merge_Date__c.field-meta.xml
<CustomField>
    <fullName>Merge_Date__c</fullName>
    <label>Merge Date</label>
    <type>Date</type>
</CustomField>