force-app/main/default/objects/Merge_Account__c/fields/Person_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Person_Mailing_Country__c</fullName>
    <label>Person Mailing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>